# BuildHub

./: README.md
backend/auth-service/: .dockerignore  .env  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  auth.db  diesel.toml  docker-compose.override.yml  docker-compose.yml  prometheus.yml  register_response.json
backend/auth-service/infra/: docker-compose.opensearch.yml  docker-compose.prometheus.yml  filebeat.yml  logstash.conf
backend/auth-service/infra/grafana/dashboards/: auth_service.json
backend/auth-service/infra/prometheus/: prometheus.yml
backend/auth-service/integration-tests/: .gitignore  conftest.py  requirements.txt
backend/auth-service/integration-tests/tests/: test_auth.py  test_password.py  test_register.py
backend/auth-service/integration-tests/utils/: api_client.py  test_data.py
backend/auth-service/migrations/2025-03-19-185903_create_users/: up.sql
backend/auth-service/scripts/: docker-run.sh
backend/auth-service/src/: app.rs  main.rs  schema.rs
backend/auth-service/src/config/: database.md  database.rs  database_doc.md  mod.rs  otel.rs  redis.rs
backend/auth-service/src/db/: schema.rs  users.rs
backend/auth-service/src/handlers/: activation.rs  activation_logic.rs  debug.rs  login.rs  login_logic.rs  logout.rs  logout_logic.rs  mod.rs  password_reset.rs  password_reset_logic.rs  refresh.rs  refresh_logic.rs  register.rs  register_logic.rs
backend/auth-service/src/metricss/: activation_metrics.rs  app_metrics.rs  core.rs  database_metrics.rs  debug_metrics.rs  email_metrics.rs  error_metrics.rs  jwt_metrics.rs  login_metrics.rs  logout_metrics.rs  middleware_metrics.rs  mod.rs  password_metrics.rs  rate_limiter_metrics.rs  redis_metrics.rs  refresh_metrics.rs  register_metrics.rs  validation_metrics.rs
backend/auth-service/src/middleware/: jwt_auth.rs  login_checks.rs  mod.rs  rate_limiter.rs  telemetry.rs
backend/auth-service/src/utils/: email.rs  email_ref.rs  error_new.rs  errors.rs  errors_ref.rs  hashing.rs  jwt.rs  jwt_ref.rs  log.rs  log_new.rs  log_ref.rs  metrics.rs  metrics_new.rs  metrics_ref.rs  mod.rs  otel.rs  rate_limit.rs  rate_limit_ref.rs  telemetry.rs  test_utils.rs  test_utils_ref.rs  validators.rs  validators_ref.rs
docker/: cli.sh  docker-compose.yml  (+2 more)
(+48 files in other folders)
