[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
argon2 = "0.4"
log = "0.4"
rand = "0.8"
dotenvy = "0.15"
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0"
r2d2 = "0.8"
redis = { version = "0.21", features = ["aio", "tokio-comp", "connection-manager"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"