[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
argon2 = "0.4"
log = "0.4"
rand = "0.8"
dotenvy = "0.15"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
r2d2 = "0.8"
redis = { version = "0.21", features = ["aio"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "trace", "request-id", "metrics"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
lazy_static = "1.4.0"
regex = "1"
chrono = "0.4"
lettre = "0.10.0"
uuid = { version = "1", features = ["v4"] }
prometheus = "0.13"
once_cell = "1.18.0"
crossbeam-channel = "0.5"
thiserror = "2.0.12"
tracing-error = "0.2.1"
base64 = "0.22.1"
axum-prometheus = "0.8.0"
metrics = "0.18"
metrics-exporter-prometheus = "0.8"
tracing-appender = "0.2"
deadpool-redis = "0.10"
hyper = { version = "0.14", features = ["full"] }
tracing-opentelemetry             = "0.31.0"
opentelemetry                     = "0.30.0"
opentelemetry_sdk                 = { version = "0.30.0", features = ["rt-tokio", "logs"] }
opentelemetry-otlp                = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-appender-log        = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"
env_logger = "0.11.8"

[dev-dependencies]
tracing-test = "0.2.5"
